@@ -2,6 +2,8 @@ changelog
 
 -- next
 
++ Unveil and pledge restrictions on OpenBSD.
+
 + Lists supported in markdown.
 
 + Rewrite admin console to avoid large dependencies.
